# plant-id-examples

./: LICENSE  Plant.id API.postman_collection.json  PolyMultiplyCPP.cpp  README.md  response_health_assessment.json  response_species_identification.json
android/: Backend.java  MainActivity.java
dart/: .packages  identification.dart  main.dart  pubspec.yaml  request_handler.dart
java/: Health_Assessment.java  Plant_Identification.java  README.md  Sync_Java.java
javascript/: README.md  health_assessment_example.html  plant_identification_example.html  sync_identification_example.html
node/: health_assessment_example_axios.js  health_assessment_example_https.js  plant_identification_example_axios.js  plant_identification_example_https.js  sync_identification_example_axios.js  sync_identification_example_https.js
php/: health_assessment_example.php  plant_identification_example.php  sync_identification_example.php
python/: async_identification_example.py  async_plant_identification_example.py  health_assessment_example.py  identification_example_with_plant_matching.py  plant_id_client.py  plant_identification_example.py  requests.conversation.py  requests.multiple_requests_speedup.py  requests.plant_identification_with_suggestion_filter.py  requests.plant_search_and_detail.py  requests.simple.health_assessment.py  requests.simple.plant_identification.py  sdk.advanced.plant_identification.py  sdk.async.plant_identification.py  sdk.conversation.py  sdk.plant_identification_with_specified_classification.py  (+6 more)
rust/async/: Cargo.toml
rust/async/src/: main.rs
(+15 files in other folders)
