[package]
name = "rust"
version = "0.1.0"
authors = ["Rui Lebre <ruilebre@ua.pt>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.8", features = ["json"] }
tokio = { version = "1.8.4", features = ["macros"] }
serde_json = "1.0.58"
rustc-serialize = "0.3.24"
regex = "1.3.9"
